# genetIC

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO.md  constrainedzoom.py  gaussian.py  multiscale.py  myaasmacros.sty  notes.tex
genetIC/: Dockerfile  Doxyfile  IC_output.txt  Makefile  README.md  README.txt  configure.ac  plotslice.py
genetIC/fftw_real_pack/: fftw-real-packing.nb
genetIC/src/: Makefile.am  bindings.hpp  coordinate.hpp  dummyic.hpp  filter.hpp  grid.hpp  ic.hpp  io.hpp  main.cpp  main_mapper.cpp  multilevelcontext.hpp
genetIC/src/constraints/: constraintapplicator.hpp  multilevelconstraintgenerator.hpp  onelevelconstraintgenerator.hpp
genetIC/src/cosmology/: camb.hpp  parameters.hpp
genetIC/src/field/: multilevelfield.hpp  randomfieldgenerator.hpp
genetIC/src/io/: gadget.hpp  gadgethdf.hpp  grafic.hpp  input.hpp  numpy.hpp  swift.hpp  tipsy.hpp
genetIC/src/numerics/: interpolation.hpp  vectormath.hpp
genetIC/src/particles/: generator.hpp  mapper.hpp  multilevelgenerator.hpp  zeldovich.hpp
genetIC/src/simulation/: coordinate.hpp  grid.hpp  multilevelcontext.hpp  window.hpp
genetIC/src/tools/: filesystem.cpp  filesystem.h  logging.cpp  logging.hpp  lru_cache.hpp  memmap.hpp  parser.hpp  signaling.hpp  util_functions.hpp
genetIC/tests/: compare.py  run_mapper_tests.sh  run_quadratic_tests.sh  run_tests.sh  test_generator.py
genetIC/tests/comparison_test_3/: paramfile.txt
genetIC/tests/disabled_test_12c_modification_with_baryons/: reference_output
genetIC/tests/disabled_test_16_ignore_camb_headers/: paramfile.txt
genetIC/tests/mapper_test_01a_zoom/: IC_output.params  IC_output.txt  paramfile.txt  paramfile_b.txt  photogenic.txt  unzoomed_paramfile.txt
genetIC/tests/mapper_test_01b_zoom_gas/: IC_output.params  IC_output.txt  paramfile.txt  reference.txt
genetIC/tests/mapper_test_02a_grafic/: IC_output.params  IC_output.txt  ID_a.txt  output.txt  paramfile.txt
genetIC/tests/mapper_test_02b_grafic_zoom_to_coarse/: IC_output.params  IC_output.txt  output.txt  paramfile.txt  reference.txt  test_ids.txt
genetIC/tests/mapper_test_02c_grafic_relative/: IC_output.params  IC_output.txt  ID_a.txt  morezoomed.txt  paramfile.txt  paramfile_b.txt  reference.txt
genetIC/tests/mapper_test_02d_grafic_rel_subsupersample/: IC_output.params  IC_output.txt  ID_a.txt  morezoomed.txt  paramfile.txt  paramfile_a.txt  paramfile_b.txt  reference.txt
genetIC/tests/mapper_test_03a_zoom_linkage/: IC_output.params  IC_output.txt  paramfile.txt  paramfile_a.txt  paramfile_b.txt  photogenic.txt  reference.txt  test_ids.txt
genetIC/tests/mapper_test_03b_zoom_to_coarse/: IC_output.params  IC_output.txt  ID_a.txt  output.txt  paramfile.txt  paramfile_a.txt  paramfile_b.txt  zoomtest.txt
genetIC/tests/mapper_test_04a_stray/: IC_output.params  IC_output.txt  paramfile.txt  photogenic.txt  reference.txt
genetIC/tests/mapper_test_04b_stray_linkage/: IC_output.params  IC_output.txt  paramfile.txt  photogenic.txt  reference.txt
genetIC/tests/mapper_test_04c_stray_wrapping/: IC_output.params  IC_output.txt  paramfile.txt  photogenic.txt  reference.txt  test_6.tipsy
genetIC/tests/mapper_test_05_gadget_ptype/: IC_output.params  IC_output.txt  id_flagged.txt  paramfile.txt  paramfile_flagged_ptype.txt  reference.txt
genetIC/tests/mapper_test_06_intermediate_levels/: IC_output.params  IC_output.txt  input.txt  paramfile.txt  paramfile_with_intermediates.txt  photogenic.txt  reference.txt  test_1.tipsy
genetIC/tests/mapper_test_07_ids_from_two_inputs/: IC_output.params  IC_output.txt  output.txt  paramfile.txt  paramfile_lores.txt  paramfile_ultra_lores.txt  test_1.tipsy  tipsy.param
genetIC/tests/mapper_test_08_tool_uses_correct_map/: paramfile_a.txt  paramfile_b.txt  reference.txt
genetIC/tests/mapper_test_3/: paramfile.txt
genetIC/tests/mapper_test_4/: reference.txt
genetIC/tests/mapper_test_5/: paramfile.txt
genetIC/tests/mapper_test_6/: paramfile.txt  reference.txt
genetIC/tests/mapper_test_7/: paramfile.txt
genetIC/tests/profiler_test/: paramfile.txt
genetIC/tests/quadratic_test_1/: paramfile.txt
genetIC/tests/test_01/: paramfile.txt
genetIC/tests/test_01a/: reference_output
genetIC/tests/test_01a_basic_grid/: IC_output.params  IC_output.txt  grid-0.npy  paramfile.txt  test_1_0.ps
genetIC/tests/test_01b/: paramfile.txt
genetIC/tests/test_01c_zoom_grid/: paramfile.txt  zoomtest_crosscheck.txt
genetIC/tests/test_01d_two_zooms/: paramfile.txt
genetIC/tests/test_01e_wrapping_zoom/: paramfile.txt  reference_output  reference_output.overdensity
genetIC/tests/test_01f_two_zooms_adapt_mask/: paramfile.txt
genetIC/tests/test_01g_zoom_grid_vel_offset/: paramfile.txt  reference_output
genetIC/tests/test_01h_zoom_grid_pos_offset/: paramfile.txt  reference_output
genetIC/tests/test_01i_zoom_pos_offset_wrap/: paramfile.txt
genetIC/tests/test_01j_two_zooms_edge/: paramfile.txt  reference.txt
genetIC/tests/test_02/: paramfile.txt
genetIC/tests/test_02_simple_modif/: paramfile.txt  reference_output  reference_output.overdensity
genetIC/tests/test_02a_onemodif_zeroed_zoom/: paramfile.txt
genetIC/tests/test_02a_simple_modif_with_random/: reference_output
genetIC/tests/test_02b_onemodif_zoom/: paramfile.txt
genetIC/tests/test_02c_two_modifs/: paramfile.txt
genetIC/tests/test_02d_modif_double_zoom/: check_constr.txt  paramfile.txt
genetIC/tests/test_02e_two_separate_modifs/: paramfile.txt  reference_output
genetIC/tests/test_02f_onelevelvariance/: check_variance.txt  paramfile.txt  reference.txt
genetIC/tests/test_02g_multilevelvariance/: check_variance.txt  paramfile.txt  reference.txt
genetIC/tests/test_02h_onelevelalgorithm/: paramfile.txt
genetIC/tests/test_02i_multilevel_algorithm/: paramfile.txt
genetIC/tests/test_02j_invertible_modifs/: paramfile.txt  reference.txt
genetIC/tests/test_02k_chisquare_onelevel/: paramfile.txt  reference.txt
genetIC/tests/test_02l_chisquare_modification/: paramfile.txt  reference.txt
genetIC/tests/test_02m_chisquare_twolevels/: paramfile.txt  (+1 more)
(+566 files in other folders)
